style: prevent date and time from wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
 :root {
+  --width-max: 1200px;
+  --b-radius: 4px;
+  --b-width: 1px;
+
+  /* Colors */
   --color-turing-blue: blue;
   --color-turing-red: red;
   --color-bg: black;
@@ -9,6 +14,8 @@
   --color-prominent: white;
   --color-less-prominent: #949494;
   --color-muted: #4a4a4a72;
+
+  /* Spacing */
   --spacing-1: 4px;
   --spacing-2: 8px;
   --spacing-3: 12px;
@@ -18,12 +25,14 @@
   --spacing-7: 28px;
   --spacing-8: 32px;
   --spacing-side: var(--spacing-4);
-  --width-max: 1200px;
-  --b-radius: 4px;
-  --b-width: 1px;
+
+  /* Breakpoints */
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
 }
 
-@media only screen and (min-width: 720px) {
+@media only screen and (min-width: 768px) {
   :root {
     --spacing-side: var(--spacing-8);
   }
