--- a/assets/css/utils.css
+++ b/assets/css/utils.css
@@ -229,3 +229,21 @@
 .ml-8 {
   margin-left: var(--spacing-8);
 }
+
+.nowrap {
+  white-space: nowrap;
+}
+
+@media only screen and (max-width: 576px) {
+  /* Small */
+  .sm-none {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  /* Medium */
+  .md-none {
+    display: none;
+  }
+}
